==> zlzyangreal/MCU_Project/Stm32_Project/BSP_MATH/FFT/SYSTEM/usart/usart.c <==
#include "sys.h"
#include "usart.h"	
//---------------------------------------------------------
//
//题目：
//作者;zlzyang
//串口部分
//
//---------------------------------------------------------
////////////////////////////////////////////////////////////////////////////////// 	 
//如果使用ucos,则包括下面的头文件即可.
#if SYSTEM_SUPPORT_OS
#include "includes.h"					//ucos 使用	  
#endif

//////////////////////////////////////////////////////////////////
//加入以下代码,支持printf函数,而不需要选择use MicroLIB	  
#if 1
#pragma import(__use_no_semihosting)             
//标准库需要的支持函数                 
struct __FILE 
{ 
	int handle; 
}; 

FILE __stdout;       
//定义_sys_exit()以避免使用半主机模式
//printf 函数使用了半主机模式，所以直接使用标准库会导致程序无法运
//行，因此必须提前告知编译器不使用半主机模式
void _sys_exit(int x) 
{ 
	x = x; 
} 
//---------------------重定义fputc-----------------------------//
int fputc(int ch, FILE *f)
{ 	
	while((USART1->SR&0X40)==0);//循环发送,直到发送完毕,直接操作寄存器
  //判断条件是判断改串口是否处于发送状态	
	USART1->DR = (u8) ch; //寄存器操作     
	return ch;
}
#endif
 
#if EN_USART1_RX   //如果使能了接收
//串口1中断服务程序
//注意,读取USARTx->SR能避免莫名其妙的错误   	
u8 USART_RX_BUF[USART_REC_LEN];     //接收缓冲,最大USART_REC_LEN个字节.
//接收状态
//bit15，	接收完成标志
//bit14，	接收到0x0d
//bit13~0，	接收到的有效字节数目
u16 USART_RX_STA=0;       //接收状态标记	

//---------------------------------------------------------
//
//串口一的初始化配置
//包括GPIO、串口配置以及接收时中断配置
//PA9-->TX  PA10-->RX
//
//---------------------------------------------------------

void uart1_init(void)
{
//---------------使能GPIO以及串口时钟--------------------------//
	 
	 GPIO_InitTypeDef GPIO_InitStructure;
	 USART_InitTypeDef USART_InitStructure;
	
	 NVIC_InitTypeDef NVIC_InitStructure;
	
	 RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA,ENABLE); //使能GPIOA端口时钟
	 RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1,ENABLE);//使能USART1时钟

//----------------串口一GPIO复用映射---------------------------//
	 
	 GPIO_PinAFConfig(GPIOA,GPIO_PinSource9,GPIO_AF_USART1);
   GPIO_PinAFConfig(GPIOA,GPIO_PinSource10,GPIO_AF_USART1); 
	 
//---------------------GPIO配置--------------------------------//
	
	 GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9 | GPIO_Pin_10; //GPIOA9与GPIOA10
	 GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;//复用功能
	 GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;	//速度50MHz
	 GPIO_InitStructure.GPIO_OType = GPIO_OType_PP; //推挽复用输出
	 GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP; //上拉
	 GPIO_Init(GPIOA,&GPIO_InitStructure); //初始化PA9，PA10
//---------------------串口配置--------------------------------//
   USART_InitStructure.USART_BaudRate = 115200;//波特率设置
   USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为8位数据格式
	 USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
	 USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
	 USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
	 USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;	//收发模式
	 USART_Init(USART1, &USART_InitStructure); //初始化串口1
	 USART_Cmd(USART1, ENABLE);  //使能串口1 
//--------------------接收的中断配置---------------------------//

#if EN_USART1_RX
	 USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);//开启相关中断

//Usart1 NVIC 配置
   NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;//串口1中断通道
	 NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority=3;//抢占优先级3
	 NVIC_InitStructure.NVIC_IRQChannelSubPriority =3;		//子优先级3
	 NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;			//IRQ通道使能
	 NVIC_Init(&NVIC_InitStructure);	//根据指定的参数初始化VIC寄存器、

#endif   

}
//---------------------------------------------------------
//
//串口二的初始化配置
//包括GPIO、串口配置以及接收时中断配置
//PA2-->TX  PA3-->RX
//
//---------------------------------------------------------
void uart2_init(void)
{
//---------------使能GPIO以及串口时钟--------------------------//
	 
	 GPIO_InitTypeDef GPIO_InitStructure;
	 USART_InitTypeDef USART_InitStructure;
	
	 NVIC_InitTypeDef NVIC_InitStructure;
	
	 RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA,ENABLE); //使能GPIOA端口时钟
	 RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2,ENABLE);//使能USART1时钟

//----------------串口一GPIO复用映射---------------------------//
	 
	 GPIO_PinAFConfig(GPIOA,GPIO_PinSource2,GPIO_AF_USART2);
   GPIO_PinAFConfig(GPIOA,GPIO_PinSource3,GPIO_AF_USART2); 
	 
//---------------------GPIO配置--------------------------------//
	
	 GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2 | GPIO_Pin_3; 
	 GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;//复用功能
	 GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;	//速度50MHz
	 GPIO_InitStructure.GPIO_OType = GPIO_OType_PP; //推挽复用输出
	 GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP; //上拉
	 GPIO_Init(GPIOA,&GPIO_InitStructure); 
//---------------------串口配置--------------------------------//
   USART_InitStructure.USART_BaudRate = 9600;//波特率设置
   USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为8位数据格式
	 USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
	 USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
	 USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
	 USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;	//收发模式
	 USART_Init(USART2, &USART_InitStructure); 
	 USART_Cmd(USART2, ENABLE);   
//--------------------接收的中断配置---------------------------//

#if EN_USART2_RX
	 USART_ITConfig(USART2, USART_IT_RXNE, ENABLE);//开启相关中断

//Usart2 NVIC 配置
   NVIC_InitStructure.NVIC_IRQChannel = USART2_IRQn;//串口1中断通道
	 NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority=3;//抢占优先级3
	 NVIC_InitStructure.NVIC_IRQChannelSubPriority =3;		//子优先级3
	 NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;			//IRQ通道使能
	 NVIC_Init(&NVIC_InitStructure);	//根据指定的参数初始化VIC寄存器、

#endif   

}
  

void USART1_IRQHandler(void)                	//串口1中断服务程序
{
	u8 Res;
#if SYSTEM_SUPPORT_OS 		//如果SYSTEM_SUPPORT_OS为真，则需要支持OS.
	OSIntEnter();    
#endif
	if(USART_GetITStatus(USART1, USART_IT_RXNE) != RESET)  //接收中断(接收到的数据必须是0x0d 0x0a结尾)
	{
		Res =USART_ReceiveData(USART1);//(USART1->DR);	//读取接收到的数据
		
		if((USART_RX_STA&0x8000)==0)//接收未完成
		{
			if(USART_RX_STA&0x4000)//接收到了0x0d
			{
				if(Res!=0x0a)USART_RX_STA=0;//接收错误,重新开始
				else USART_RX_STA|=0x8000;	//接收完成了 
			}
			else //还没收到0X0D
			{	
				if(Res==0x0d)USART_RX_STA|=0x4000;
				else
				{
					USART_RX_BUF[USART_RX_STA&0X3FFF]=Res ;
					USART_RX_STA++;
					if(USART_RX_STA>(USART_REC_LEN-1))USART_RX_STA=0;//接收数据错误,重新开始接收	  
				}		 
			}
		}   		 
  } 
#if SYSTEM_SUPPORT_OS 	//如果SYSTEM_SUPPORT_OS为真，则需要支持OS.
	OSIntExit();  											 
#endif
}

#endif
